...
                            )
                        } else {
                            LazyColumn(
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .weight(1f)
                                    .testTag("MainScreen_UserList"),
                                state = lazyListState,
                                contentPadding = PaddingValues(bottom = 80.dp)
                            ) {
                                items(userList, key = { it.person.id }) { userUiState ->
                                    val isOperating = when (operation) {
                                        is PersonListOperation.Deleting -> operation.targetId == userUiState.person.id
...
